# Universal-Document-Parser-Library

./: .gitignore  README.md  pyproject.toml  setup.py
docparser/src/: document_parser.h  python_bindings.cpp
